versions/v2.8/modules/en/pages/rancher-admin/users/settings/manage-node-templates.adoc
= Managing Node Templates
:page-languages: [en, zh]
:revdate: 2024-09-26
:page-revdate: {revdate}
:experimental:

When you provision a cluster xref:cluster-deployment/infra-providers/infra-providers.adoc[hosted by an infrastructure provider], xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_templates[node templates] are used to provision the cluster nodes. These templates use Docker Machine configuration options to define an operating system image and settings/parameters for the node. You can create node templates in two contexts:

* While xref:cluster-deployment/infra-providers/infra-providers.adoc[provisioning a node pool cluster].
* At any time, from your xref:rancher-admin/users/settings/settings.adoc[user settings].

When you create a node template, it is bound to your user profile. Node templates cannot be shared among users. You can delete stale node templates that you no longer user from your user settings.

== Creating a Node Template

. Click *☰ > Cluster Management*.
. Click menu:RKE1 Configuration[Node Templates].
. Click *Add Template*.
. Select one of the cloud providers available. Then follow the instructions on screen to configure the template.

*Result:* The template is configured. You can use the template later when you xref:cluster-deployment/infra-providers/infra-providers.adoc[provision a node pool cluster].

== Updating a Node Template

. Click *☰ > Cluster Management*.
. Click menu:RKE1 Configuration[Node Templates].
. Choose the node template that you want to edit and click the *⋮ > Edit*.
+

[NOTE]
====
The default `active` xref:rancher-admin/global-configuration/provisioning-drivers/manage-node-drivers.adoc[node drivers] and any node driver, that has fields marked as `password`, are required to use xref:cluster-deployment/infra-providers/infra-providers.adoc#_cloud_credentials[cloud credentials].
====


. Edit the required information and click *Save*.

*Result:* The node template is updated. All node pools using this node template will automatically use the updated information when new nodes are added.

== Cloning Node Templates

When creating new node templates from your user settings, you can clone an existing template and quickly update its settings rather than creating a new one from scratch. Cloning templates saves you the hassle of re-entering access keys for the cloud provider.

. Click *☰ > Cluster Management*.
. Click menu:RKE1 Configuration[Node Templates].
. Find the template you want to clone. Then select *⋮ > Clone*.
. Complete the rest of the form.

*Result:* The template is cloned and configured. You can use the template later when you xref:cluster-deployment/infra-providers/infra-providers.adoc[provision a node pool cluster].

== Deleting a Node Template

When you no longer use a node template, you can delete it from your user settings.

. Click *☰ > Cluster Management*.
. Click menu:RKE1 Configuration[Node Templates].
. Select one or more template from the list. Then click *Delete*. Confirm the delete when prompted.
